Roughly completed the nav and its background. Problem is the page is correct but the contents are like zoomed in and huge.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Developer's Portfolio Learned Programming Hero</title>
+    <link rel="stylesheet" href="assets/styles/styles.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <header></header>
+  <body class="open-sans-normal">
+    <header class="header">
+      <nav>
+        <h3 class="nav-title">Saad<span class="text-primary">TK.</span></h3>
+        <ul>
+          <li><a class="dark-2" href="">Portfolio</a></li>
+          <li><a class="dark-2" href="">Blog</a></li>
+          <li><button class="btn-primary">Hire Me</button></li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h3 class="banner-greetings dark-2">Hi! I am</h3>
+          <h1 class="banner-title">Tahmid Karim Saad</h1>
+          <p class="banner-description">
+            A Computer Science graduate passionate about web development, with
+            expertise in frontend and backend technologies, database management,
+            and machine learning. Proven experience in building scalable and
+            user-friendly applications. A team player with strong
+            problem-solving skills and a commitment to continuous learning.
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Hire Me</button>
+        </div>
+        <img
+          class="banner-profile-pic"
+          src="assets/images/Saad_front_face-no-bg.png"
+          alt="Saad Profile Image"
+        />
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
