Created About Me section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
       <nav>
         <h3 class="nav-title">Saad<span class="text-primary">TK.</span></h3>
         <ul>
@@ -28,11 +28,9 @@
           <h3 class="banner-greetings dark-2">Hi! I am</h3>
           <h1 class="banner-title">Tahmid Karim Saad</h1>
           <p class="banner-description">
-            A Computer Science graduate passionate about web development, with
-            expertise in frontend and backend technologies, database management,
-            and machine learning. Proven experience in building scalable and
-            user-friendly applications. A team player with strong
-            problem-solving skills and a commitment to continuous learning.
+            Perhaps you dislike something which is good for you and like
+            something which is bad for you. Allah knows and you do not know.
+           <pre> –Surat Al-Baqarah, verse 216</pre>
           </p>
           <button class="btn-primary">Download CV</button>
           <button class="btn-primary">Hire Me</button>
@@ -44,7 +42,39 @@
         />
       </div>
     </header>
-    <main></main>
+
+    <main>
+      <section class="about secondary-bg">
+        <h3 class="section-title"> About Me
+        </h3>
+        <p class="section-description">
+            A Computer Science graduate passionate about web development, with
+            expertise in frontend and backend technologies, database management,
+            and machine learning. Proven experience in building scalable and
+            user-friendly applications. A team player with strong problem-solving
+            skills and a commitment to continuous learning.</p>
+
+            <div class="about-items">
+                <!-- .about-item*4>p.item-title+p.item-description -->
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-description">Tahmid Karim Saad</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">tahmidkarimsaad@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of Birth</p>
+                    <p class="item-description">September 12, 2002</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-description">Dhaka, Bangladesh</p>
+                </div>
+            </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
