--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </header>
 
     <main>
+        <!-- about me section start -->
       <section class="about secondary-bg">
         <h3 class="section-title"> About Me
         </h3>
@@ -74,6 +75,41 @@
                 </div>
             </div>
       </section>
+      <!-- about me section end -->
+
+<!-- what I do section start -->
+
+<section class="skills">
+    <h3 class="section-title text-center">What I Do</h3>
+    <p class="section-description text-center">
+        I have more than 2 years experience building Web Applications for clients all over our country. Below is a quick overview of my main technical skill sets and technologies I use. Want to find out more about my experience? Check out my online resume and project portfolio.
+    </p>
+
+    <div class="skills-container">
+    <!-- .skill*4>img+h4.skill-title+p.skill-description -->
+    <div class="skill">
+        <img src="assets/images/icons/react.png" alt="React logo">
+        <h4 class="skill-title">React</h4>
+        <p class="skill-description">Skilled in building dynamic and responsive UIs with React, utilizing hooks like useState and useEffect for state management and side effects. Proficient in component-based architecture, JSX, and React Router for handling navigation and routes in single-page applications.</p>
+    </div>
+    <div class="skill">
+        <img src="assets/images/icons/js.png" alt="JavaScript logo">
+        <h4 class="skill-title">Vanilla JavaScript</h4>
+        <p class="skill-description">Proficient in vanilla JavaScript, ES6+ features, DOM manipulation, and asynchronous programming using async/await. Strong experience in handling events, AJAX requests (via Fetch API), and working with client-side storage (localStorage, sessionStorage). Adept at using JavaScript in the context of MERN stack applications, communicating with REST APIs, and integrating with React and Node.js.</p>
+    </div>
+    <div class="skill">
+        <img src="assets/images/icons/mongo.png" alt="MongoDB logo">
+        <h4 class="skill-title">MongoDB</h4>
+        <p class="skill-description">Experienced in working with MongoDB to design and manage NoSQL databases, including creating schemas and handling CRUD operations using Mongoose. Proficient in leveraging MongoDB's flexible document structure for scalable data storage and querying in full-stack applications.</p>
+    </div>
+    <div class="skill">
+        <img src="assets/images/icons/nodejs.png" alt="Node logo">
+        <h4 class="skill-title">Node</h4>
+        <p class="skill-description">Strong experience with Node.js for building fast and scalable server-side applications. Proficient in working with Express.js to create RESTful APIs, handle routing, and manage middleware for tasks like authentication and data validation.</p>
+    </div>
+</div>
+</section>
+ <!-- what I Do section end -->
     </main>
     <footer></footer>
   </body>
