Coded resume section fully. Rough around the edges.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,70 @@
 </div>
 </section>
  <!-- what I Do section end -->
-    </main>
+
+ <!-- resume section start -->
+    <section class="resume">
+        <h3 class="section-title text-center">A Summary of My Resume</h3>
+
+        <div class="resume-container">
+            <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
+            <div class="resume-column">
+                <h3 class="resume-column-title">My Education</h3>
+                <hr>
+                <div class="experience">
+                    <h4 class="experience-title">BSc in Computer Science and Engineering</h4>
+                    <h5 class="experience-sub-title">North South University</h5>
+                    <div class="experience-description">
+                        Finished a 4-year bachelor’s degree in Computer Science and Engineering, gaining a solid foundation in computer programming, algorithms, data structures, and software development. Developed practical experience through projects in areas like web development, database management, and systems design. Acquired strong problem-solving skills, along with hands-on experience in using various programming languages, frameworks, and tools to solve real-world challenges. Participated in group work and collaborative projects, enhancing teamwork and communication skills.
+                    </div>
+                </div>
+                <hr>
+                <div class="experience">
+                    <h4 class="experience-title">BSc in Computer Science and Engineering</h4>
+                    <h5 class="experience-sub-title">North South University</h5>
+                    <div class="experience-description">
+                        Finished a 4-year bachelor’s degree in Computer Science and Engineering, gaining a solid foundation in computer programming, algorithms, data structures, and software development. Developed practical experience through projects in areas like web development, database management, and systems design. Acquired strong problem-solving skills, along with hands-on experience in using various programming languages, frameworks, and tools to solve real-world challenges. Participated in group work and collaborative projects, enhancing teamwork and communication skills.
+                    </div>
+                </div>
+                <hr>
+                <div class="experience">
+                    <h4 class="experience-title">BSc in Computer Science and Engineering</h4>
+                    <h5 class="experience-sub-title">North South University</h5>
+                    <div class="experience-description">
+                        Finished a 4-year bachelor’s degree in Computer Science and Engineering, gaining a solid foundation in computer programming, algorithms, data structures, and software development. Developed practical experience through projects in areas like web development, database management, and systems design. Acquired strong problem-solving skills, along with hands-on experience in using various programming languages, frameworks, and tools to solve real-world challenges. Participated in group work and collaborative projects, enhancing teamwork and communication skills.
+                    </div>
+                </div>
+                
+            </div>
+            <div class="resume-column">
+                <h3 class="resume-column-title">My experience</h3>
+                <hr>
+                <div class="experience">
+                    <h4 class="experience-title">Full Stack Developer</h4>
+                    <h5 class="experience-sub-title">Skill Connect - Job Portal</h5>
+                    <div class="experience-description">Developed a full-stack job portal featuring user dashboards for both job seekers and employers. Implemented real-time job search functionality using AJAX and lazy loading for improved performance. Integrated **GitHub OAuth** for secure authentication and **Stripe** for seamless payment processing. Optimized application performance by utilizing **Redis caching** for job statistics and the most-viewed job listings.</div>
+                </div>
+                <hr>
+                <div class="experience">
+                    <h4 class="experience-title">Full Stack Developer</h4>
+                    <h5 class="experience-sub-title">Accesso-Sync - Ecommerce Web Application</h5>
+                    <div class="experience-description">Built a scalable eCommerce application with secure user authentication and role-based access control. Developed features for product browsing, advanced filtering, and real-time cart updates. Ensured a seamless shopping experience with dynamic updates and efficient user management.</div>
+                </div>
+                <hr>
+                <div class="experience">
+                    <h4 class="experience-title">Full Stack Developer</h4>
+                    <h5 class="experience-sub-title">Modhubag Primary School</h5>
+                    <div class="experience-description">Created a dynamic and responsive school website for managing schedules and student records. Enhanced database management for student and teacher information using PHP and MySQL, ensuring efficient data storage and retrieval.</div>
+                </div>
+            </div>
+        </div>
+        <div class="text-center resume-download-cv">
+        <button class="btn-primary">Download CV</button>
+    </div>
+    </section>
+<!-- resume section end -->
+
+</main>
     <footer></footer>
   </body>
 </html>
