--- a/index.html
+++ b/index.html
@@ -174,6 +174,32 @@
 <!-- resume section end -->
 
 </main>
-    <footer></footer>
+
+<!-- footer start -->
+    <footer class="secondary-bg">
+        <div class="footer-column">
+        <div class="section-title">Let's Connect</div>
+
+        <p>Please fill the form below to contact with me or call me between 08:00 p.m and 10:00 p.m GMT +6 or UTC +6, Sunday through Thursday.</p>
+
+        <div>
+            <a href=""><img src="assets/images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="assets/images/icons/insta.png" alt=""></a>
+            <a href=""><img src="assets/images/icons/twitter.png" alt=""></a>
+        </div>
+    </div>
+        <div class="footer-column">
+            <h3 class="section-title">Inbox Me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="20" placeholder="Enter message here.....">
+                </textarea>
+                <button class="btn-primary" type="submit">Submit</button>
+            </form>
+
+        </div>
+    </footer>
+    <!-- resume end -->
   </body>
 </html>
