--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
+
+    <script src="https://kit.fontawesome.com/9f90595145.js" crossorigin="anonymous"></script>
   </head>
   <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -32,8 +34,8 @@
             something which is bad for you. Allah knows and you do not know.
            <pre> –Surat Al-Baqarah, verse 216</pre>
           </p>
-          <button class="btn-primary">Download CV</button>
-          <button class="btn-primary">Hire Me</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+          <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact Me</button>
         </div>
         <img
           class="banner-profile-pic"
@@ -168,7 +170,7 @@
             </div>
         </div>
         <div class="text-center resume-download-cv">
-        <button class="btn-primary">Download CV</button>
+        <button class="btn-primary"> <i class="fa-solid fa-download"></i>Download CV</button>
     </div>
     </section>
 <!-- resume section end -->
